# spacetraders_sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-tidy
include/: authentication.hpp  connection.hpp  log.h
include/api/: agent_api.hpp
src/: CMakeLists.txt  authentication.cpp  connection.cpp  log.cpp  main.cpp  spacetraders-sdk.cpp
tests/: CMakeLists.txt  test.cpp
